--- a/Campaign Styles.css
+++ b/Campaign Styles.css
@@ -1,33 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-
-
-a:link {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  background-color: black;
-  color: white;
-}
-
-a:visited {
-  color: inherit;
-  text-decoration: none;
-}
-
-body {
-  font-size: 16px;
-  font-family: arial;
-}
-
-h2 {
-  color: crimson;
-}
-
 html {
   background-image: url("Main_Background.png");
   background-size: cover;
@@ -35,231 +5,163 @@ html {
   height: 1260px;
 }
 
-li {
-  margin: 5px;
-}
-
-li.a: visited {
-  color: inherit;
-  text-decoration: none;
-}
-
-.a {
-  color: rgb(250,250,250);
-  background-color: rgba(20,20,20,0.4);
-}
-
-ul {
-  list-style-type: none;
-}
-
-.nopadding {
-  padding: 0px;
-}
-
-
-
-.clearfix::after{
-  content: "";
-  clear: both;
-  display: table;
-  border-spacing: 15px;
-}
-
-.column {
-  float: left;
-  padding: 15px;
-
-
-}
-
-.announcement {
-
-  height: 200px;
-  width: 45%;
-  margin: auto;
-  padding: 25px;
- 
-}
-
-.content{
-  width: 85%;
-}
-
-.dropbtn {
-  background-color: transparent;
-  color: white;
+body {
   font-size: 16px;
-  border: none;
-  cursor: pointer;
-  padding-left: 0px;
-}
-
-.dropbtn:hover, .dropbtn:focus{
-  background-color: black;
-}
-
-.worlddropdown {
-  position: relative;
-  display:inline-block;
-  margin: -5px;
-  padding: 0px;
-}
-
-.dropdown {
-  position: relative;
-  display:inline-block;
-  margin: -5px;
-  padding: 0px;
-}
-
-.dropdown a:hover {
-  background-color: yellow;
-}
-
-.dropdown-content{
-  display: none;
-  position: absolute;
-  background-color: lime;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
- 
-
-h1 {
-  color: crimson;
-}
-.dropdown-content a {
+  font-family: arial;
   color: white;
+}
+
+.boxcontainer {
+  display: flex;
+  width: 92%;
+  margin: auto;
+  padding: 15px;
+}
+
+.box {
+  border: solid 1px white;
+  background-color: rgba(0,0,0,0.2);
+  float: none;
+  margin: auto;
+  color: white;
+  width: 48%;
+  display: inline-block;
+}
+
+.stats {
+  color: white;
+  border: solid 1px white;
+  background-color: rgba(0,0,0,0.2);
+  float: none;
+  width: 90%;
+  margin: auto;
+  height: 200px;
+  display: flex;
+  margin-top: 15px;
+}
+
+
+ul.a {
   background-color: black;
-  padding: 12px 16px;
+  font-size: 18px;
+}
+
+ul.a li {
+  display: inline-block;
+  margin-left: 50px;
+}
+
+ul.a li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  display: block;
 }
 
-.hide {
+
+ul.a li a:hover, dropdown:hover, .dropbtn:hover {
+  background-color: rgb(150,12,12);
+  color: white;
+}
+
+ul.a li.dropdown {
+  display: inline-block;
+  margin-left: 50px;
+  margin-right: 10px;
+}
+
+ul.a li.dropdown:hover {
+  background-color: black;
+}
+
+ul.a .dropdown-content {
   display: none;
-}
-
-.menu {
-  width: auto;
-  border: 2px solid black;
-  background-color: rgba(200,200,200,0.3);
-  height: auto;
-  float: left;
-  color: rgb(250,250,250);
-  font-size: 20px;
-}
-
-.partydropdown-content{
-  display: none;
+  background-color: rgb(252, 245, 229);
   position: absolute;
-  background-color: RGB(100,100,100);
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  min-width: auto;
+  box-shadow: 0px 8px 16px 0px rgba (0,0,0,0.2);
   z-index: 1;
 }
 
-
-.partymenu {
-  display: none;
-}
-
-.show {
+ul.a .dropdown-content a {
+  padding: 12px 16px;
   display: block;
-}
-
-.temporarycontainer {
-  border: 2px solid black;
-  background-color: rgba(200,200,200,0.3);
-  display: inline-block;  
-  height: auto;
-  padding: 5px;  
-  float: left;
- transition: display 2s;
-}
-
-.worlddropdown-content{
-  display: none;
-  position: absolute;
-  background-color: RGB(100,100,100);
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.worlddropdown-content a {
+  text-align: left;
   color: black;
-  padding: 12px 16px;
-  text-decoration: none;
+}
+
+ul.a .dropdown-content a:hover{
+  background-color: black;
+  color: white;
+}
+
+ul.a .dropdown:hover .dropdown-content{
   display: block;
-
 }
 
-.worlddropdown a:hover{
-  background-color: black;
+h2 {
+  text-align: center;
+  font-size: 36px;
+  margin: auto;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(150,12,12);
 }
 
-.partydropdown a:hover{
-  background-color: black;
+ul.b {
+  list-style-type: none;
+  margin: 0px;
 }
 
-.partylist {
-  display: none;
-  color: white;
-  background-color: black;
-}
-
-
-.worldlist {
-  display: none;
-  color: white;
-  background-color: black;
-  padding-left: 15px;
-  margin: 15px;
- 
+ul.b li {
+  margin-left: -10px;
 }
 
 
 .story {
-  margin-top: -40px;
-}
-
-.stats {
-  margin-top: 10px;
-  margin: auto;
-  width: 100%;
-  height: 75px;
-
-}
-
-table {
-  border-spacing: 15px;
-}
-
-td {
-  border: 1px transparent;
-}
-
-tr {
-  align: center;
-}
-
-.gap {
-  width:15px;
-  height: 200px;
-}
-
-
-.cushion{
-  height:15px;
-  width:100%;	
-  color: rgba (0,0,0,0.0);	
-}
-  
-a.email {
   color: white;
+  background-color: rgba(0,0,0,0.2);
+  font-size: 24px;
+  animation: fadeIn 5s;
+  margin-left: 50px;
+  text-align: left;
+  -webkit-animation: fadeIn 5s;
+  -moz-animation: fadeIn 5s;
+  -o-animation: fadeIn 5s;
+  -ms-animation: fadeIn 5s;
+  display: flex;
+  width: 90%;
 }
+
+@keyframes fadeIn{
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-moz-keyframes fadeIn{
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn{
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn{
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn{
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+footer {
+  text-align: center;
+  color: white;
+  margin: auto;
+}
+
+
