--- a/Campaign Styles.css
+++ b/Campaign Styles.css
@@ -110,6 +110,7 @@ ul.a .dropdown:hover .dropdown-content{
 h2 {
   text-align: center;
   font-size: 36px;
+  color: black;
   margin: auto;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: rgb(150,12,12);
