--- a/Campaign Styles.css
+++ b/Campaign Styles.css
@@ -113,7 +113,7 @@ h2 {
   color: black;
   margin: auto;
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: rgb(150,12,12);
+  -webkit-text-stroke-color: rgba(150,12,12, 0.3);
 }
 
 ul.b {
