--- a/Campaign Styles.css
+++ b/Campaign Styles.css
@@ -113,7 +113,8 @@ h2 {
   color: black;
   margin: auto;
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: rgba(150,12,12, 0.3);
+  -webkit-text-stroke-color: rgb(150,12,12);
+  color: rgba(0,0,0,0.0);
 }
 
 ul.b {
