Comments on Style sheet

--- a/Campaign Styles.css
+++ b/Campaign Styles.css
@@ -1,3 +1,4 @@
+<!--THIS IS THE BACKGROUND FOR EACH OF THE PAGES-->
 html {
   background-image: url("Main_Background.png");
   background-size: cover;
@@ -5,46 +6,20 @@ html {
   height: 1260px;
 }
 
+<!--BODY formatting; controls the whole site font color, family, and size-->
 body {
   font-size: 16px;
   font-family: arial;
   color: white;
 }
 
+<!--LINKS SHOW AS NORMAL AND DO NOT CHANGE COLOR WHEN PREVIOUSLY VISITED-->
 a:visited {
   text-decoration: none;
   color: white;
 }
-.boxcontainer {
-  display: flex;
-  width: 92%;
-  margin: auto;
-  padding: 15px;
-}
 
-.box {
-  border: solid 1px white;
-  background-color: rgba(0,0,0,0.2);
-  float: none;
-  margin: auto;
-  color: white;
-  width: 48%;
-  display: inline-block;
-}
-
-.stats {
-  color: white;
-  border: solid 1px white;
-  background-color: rgba(0,0,0,0.2);
-  float: none;
-  width: 90%;
-  margin: auto;
-  height: auto;
-  display: flex;
-  margin-top: 15px;
-}
-
-
+<!--BELOW THIS LINE COVERS THE NAVIGATION USED ON EVERY PAGE. SEE END BELOW-->
 ul.a {
   background-color: black;
   font-size: 18px;
@@ -106,7 +81,29 @@ ul.a .dropdown-content a:hover{
 ul.a .dropdown:hover .dropdown-content{
   display: block;
 }
+<!--THIS IS WHERE THE NAVIGATION FORMATTING ENDS-->
 
+
+<!--THIS IS THE CONTAINERS TO HELP CONSTRAIN THE BOX ELEMENTS; KEEPS THINGS ORGANIZED-->
+.boxcontainer {
+  display: flex;
+  width: 92%;
+  margin: auto;
+  padding: 15px;
+}
+
+<!--THE INDIVIDUAL BOXES, WHICH FLOAT AND COVER THE SCREEN; HOLDS VARIOUS ITEMS-->
+.box {
+  border: solid 1px white;
+  background-color: rgba(0,0,0,0.2);
+  float: none;
+  margin: auto;
+  color: white;
+  width: 48%;
+  display: inline-block;
+}
+
+<!--ONLY FOR THE MAIN PAGE-->
 h2 {
   text-align: center;
   font-size: 36px;
@@ -117,15 +114,17 @@ h2 {
   color: rgba(0,0,0,0.0);
 }
 
-ul.b {
-  list-style-type: none;
-  margin: 0px;
+.stats {
+  color: white;
+  border: solid 1px white;
+  background-color: rgba(0,0,0,0.2);
+  float: none;
+  width: 90%;
+  margin: auto;
+  height: auto;
+  display: flex;
+  margin-top: 15px;
 }
-
-ul.b li {
-  margin-left: -10px;
-}
-
 
 .story {
   color: white;
@@ -141,6 +140,16 @@ ul.b li {
   width: 90%;
 }
 
+ul.b {
+  list-style-type: none;
+  margin: 0px;
+}
+
+ul.b li {
+  margin-left: -10px;
+}
+
+<!--ANIMATION TO FADE IN THE TEXT ON THE MAIN PAGE-->
 @keyframes fadeIn{
   0% { opacity: 0; }
   100% { opacity: 1; }
@@ -165,13 +174,17 @@ ul.b li {
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
+<!--END OF ANIMATION FORMATTING-->
 
+<!--FOOTER INFORMATION AT THE BOTTOM OF EACH PAGE-->
 footer {
   text-align: center;
   color: white;
   margin: auto;
 }
 
+
+<!--SPECIFIC FOR THE ADVENTURING PACK PAGE-->
 .journal {
   background-color: rgba(255, 255, 255, 0.5);
   font-size: 15px;
